<resources>
    <string name="app_name">E-Commerce-route-c40</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="description">Description</string>
    <string name="read_more">Read More</string>
    <string name="categories">Categories</string>
    <string name="viewAll">View all</string>
    <string name="home_appliance">Home Appliance</string>
    <string name="review">Review</string>
    <string name="egp">EGP</string>
    <string name="search_hint">What do you search for?</string>
    <string name="somethin_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="ok">ok</string>
    <string name="connection_error">Check your internet connection</string>
    <string name="loading">Loading...</string>
    <string name="no_Categories_yet">NO Categories found! </string>
    <string name="welcome_mohamed">Welcome,Mohamed</string>
    <string name="mohamed_n_gmail_com">mohamed.N@gmail.com</string>
    <string name="your_full_name">your full name</string>
    <string name="mohamed_mohamed_nabil">Mohamed Mohamed Nabil</string>
    <string name="mohamed_nabil_gmail_com">mohamed.Nabil@gmail.com</string>
    <string name="your_e_mail">Your E- mail</string>
    <string name="your_password">Your Password</string>
    <string name="password">password</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="_6th_october_street11">6th October,street11...</string>
    <string name="your_address">Your Address</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="email_format_not_valid">email format not valid</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="please_enter_your_mobile_number">please enter your mobile number</string>
    <string name="please_enter_valid_name">please enter valid name</string>
    <string name="please_enter_valid_mobile_number">please enter valid mobile number</string>
    <string name="read_less">read less</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="color">Color</string>
</resources>